[gd_scene load_steps=7 format=3 uid="uid://bp67788al5ije"]

[ext_resource type="Script" path="res://screen/GameMain/index.gd" id="1_6tly0"]
[ext_resource type="PackedScene" uid="uid://c0nynw85dpm7d" path="res://screen/GameMain/Index2D.tscn" id="2_21d8q"]
[ext_resource type="PackedScene" uid="uid://x0hcxagr5cdj" path="res://screen/GameMain/Index3d.tscn" id="3_rnqfi"]

[sub_resource type="Environment" id="Environment_yx8j4"]
background_mode = 3
background_canvas_max_layer = 1

[sub_resource type="World3D" id="World3D_cdk0h"]
environment = SubResource("Environment_yx8j4")

[sub_resource type="LabelSettings" id="LabelSettings_cqj7o"]
font_size = 48

[node name="Index" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tly0")

[node name="Render3D" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Render3D"]
world_3d = SubResource("World3D_cdk0h")
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="Render3D/SubViewport"]
follow_viewport_enabled = true

[node name="Index2d" parent="Render3D/SubViewport/CanvasLayer" instance=ExtResource("2_21d8q")]
unique_name_in_owner = true

[node name="Index3d" parent="Render3D/SubViewport" instance=ExtResource("3_rnqfi")]
unique_name_in_owner = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Score" type="Label" parent="."]
layout_mode = 1
offset_left = 19.0
offset_right = 289.0
offset_bottom = 67.0
text = "0000000000"
label_settings = SubResource("LabelSettings_cqj7o")
metadata/_edit_lock_ = true

[node name="Acc" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -211.0
offset_right = -22.0
offset_bottom = 67.0
grow_horizontal = 0
text = "100.00%"
label_settings = SubResource("LabelSettings_cqj7o")
horizontal_alignment = 2
metadata/_edit_lock_ = true

[connection signal="object_determine" from="Render3D/SubViewport/Index3d" to="." method="_on_index_3d_object_determine"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
